[gd_scene load_steps=2 format=3 uid="uid://b8umxxej1friv"]

[ext_resource type="Script" uid="uid://0esq6oacq8dl" path="res://menu.gd" id="1_0h2wq"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0h2wq")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_top = 390.0
offset_right = 1435.0
offset_bottom = 493.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Jogar" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Jogar"

[node name="Controles" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Controles"

[node name="Sair" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Sair"

[connection signal="pressed" from="MarginContainer/VBoxContainer/Jogar" to="." method="_on_jogar_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Controles" to="." method="_on_controles_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Sair" to="." method="_on_sair_pressed"]
